--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -14,6 +14,7 @@
         "theme": "Theme",
         "themeLight": "Light",
         "themeDark": "Dark",
+        "themeSystem": "System",
         "language": "Language",
         "leftClickAction": "Left-click Tray Icon Action",
         "todoList": "Todo",
