chore(release): bump version to 0.1.9
- Feature: Open main window when clicking dock icon on macOS
- Feature: Localization for Floating Window (English/Chinese support)
- Fix: Use correct locale initialization in Popup
- Chore: Update dependencies and version numbers

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -50,5 +50,14 @@
     "locales": {
         "zh-CN": "Chinese",
         "en-US": "English"
+    },
+    "popup": {
+        "noteDetails": "Note Details",
+        "copied": "Copied",
+        "copyFailed": "Copy Failed",
+        "copyContent": "Copy Content",
+        "noDetails": "No Details",
+        "noTodos": "No todos yet",
+        "noNotes": "No notes yet"
     }
 }
