--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -22,7 +22,8 @@
         "checkUpdate": "检查更新",
         "checking": "正在检查...",
         "noUpdate": "当前已是最新版本",
-        "updateAvailable": "发现新版本"
+        "updateAvailable": "发现新版本",
+        "updating": "正在更新..."
     },
     "todo": {
         "titleLabel": "标题（可选）",
